      collection and the children of collections it contains.  This allows
      us to add several new features to conary, documented in Client and Build
      changes.
  o Config Changes:
    * Conary config handling now supports comments at the end of config lines.
      # can be escaped by a \ to use a literal # in a configuration option.
  o Server Changes:
    * Added hasTroves() repository code
    * Creating changesets atomically moves complete changesets into place
    * Content store no longer reference counts entries
    * Added support for trove marks to support mirroring

Changes in 0.80.4:
  o Build Changes:
    * PackageRecipe has been changed to follow our change to split
      conary into three packages.
    * x86_64 packaging elimintated the conary:lib component to follow x86
      (those files now belong in conary-build:lib)

Changes in 0.80.3:
  o Client Changes:
    * The internal branch source and branch binary flags were changed
      to a bitmask.
    * The warning message printed when multiple branches match a cvc
      checkout command has been improved.
    * Only interactive mode can create binary shadows and branches, and
      a warning is displayed before they are created (since source branches
      are normally the right thing to use).

  o Build Changes:
    * Files in subdirectories named "tmp" are no longer automatically
      excluded from packaging, except for /tmp and /var/tmp.
    * DanglingSymlinks now traverses intermediate symlinks; a symlink
      to a symlink to a symlink will no longer confuse it.

Changes in 0.80.2:
  o Client Changes:
    * Bugs in "conary update foo=<old>--<new>" behavior have been
      fixed.
    * "cvc co foo=<label>" will now work even if you don't have a
      buildLabel set
    * "conary showcs" will now work more nicely with group changesets.
    * "conary showcs --all" no longer shows ids and sha1s.
    * We now never erase pinned items until they are explicitly unpinned.